--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/se_database?serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=nopassword
+spring.datasource.password=99072320zp
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.database=MYSQL
