--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/se_database?serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=99072320zp
+spring.datasource.url=jdbc:mysql://localhost:3306/distributedac?serverTimezone=UTC
+spring.datasource.username=xuefen
+spring.datasource.password=jxf0903
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.database=MYSQL
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jackson.serialization.indent-output=true
 spring.jpa.open-in-view=false
