--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/distributedac?serverTimezone=UTC
-spring.datasource.username=xuefen
-spring.datasource.password=jxf0903
+spring.datasource.url=jdbc:mysql://localhost:3306/my_database?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=zhu20001129
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.database=MYSQL
